@startuml Class_Kho_BaoHanh
title Real class map - stock serial invoice warranty trace
package Entities {
  class Product
  class ProductSerial
  class StockBalance
  class StockLedger
  class StockIn
  class StockInLine
  class StockOut
  class StockOutLine
  class StockTransfer
  class StockTransferLine
  class StockAdjustment
  class StockAdjustmentLine
  class PurchaseInvoice
  class SalesInvoice
  class WarrantyCoverage
  class WarrantyClaim
  class AuditLog
}
package Services {
  class AppDbContext
  class StockInService
  class StockOutService
  class StockTransferService
  class StockAdjustmentService
  class InventoryPostingService
  class InventoryAdjustmentService
  class InvoiceService
  class WarrantyClaimService
  class ReportTraceService
  class AuditLogService
}
Product --> ProductSerial
Product --> StockBalance
Product --> StockLedger
StockIn --> StockInLine
StockOut --> StockOutLine
StockTransfer --> StockTransferLine
StockAdjustment --> StockAdjustmentLine
StockInLine --> ProductSerial
StockOutLine --> ProductSerial
SalesInvoice --> WarrantyCoverage
ProductSerial --> WarrantyCoverage
WarrantyCoverage --> WarrantyClaim
WarrantyClaim --> ProductSerial
WarrantyClaim --> StockOut
StockInService --> InventoryPostingService
StockOutService --> InventoryPostingService
StockTransferService --> InventoryPostingService
StockAdjustmentService --> InventoryAdjustmentService
WarrantyClaimService --> InventoryPostingService
InvoiceService --> AppDbContext
ReportTraceService --> AppDbContext
AuditLogService --> AppDbContext
InventoryPostingService --> AppDbContext
InventoryAdjustmentService --> AppDbContext
@enduml
